new design added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 
 </head>
 <body>
-    <div id="header">
+    <header class="header">
+        <a href="#" class="logo">Portfolio</a>
+
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#">About</a>
+            <a href="#">Projects</a> 
+            <a href="#">Achievements</a>
+            <a href="#">Hobbies</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <!--<div id="header">
         <div class="container">
             <nav>
                 <img src="images/logo name.png" class="logo">
@@ -95,5 +108,6 @@
     }
 
 </script>
+-->
 </body>
 </html>
