qualification and skill portion added

--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@
         </div>
     </section>
 
-    <section class="skills section" id="skills">
+    <section class="skills-section" id="skills">
         <h2 class="section-title">Skills</h2>
         <span class="section-subtitle">My Technical Level</span>
 
-        <div class="skill-container container grid">
+        <div class="skills-container container grid">
             <div>
                 <!--Skill 1-->
-                <div class="skills-content">
+                <div class="skills-content skills-open">
                     <div class="skills-header">
-                        <i></i>
+                        <i class='bx bx-code-curly skills-icon'></i>
                         <div>
                             <h1 class="skills-title">Frontend developer</h1>
                         </div>
-                        <i></i>
+                        <i class='bx bx-chevron-down skills-arrow'></i>
                     </div>
 
                     <div class="skills-list grid">
@@ -124,13 +124,13 @@
                 </div>
 
                 <!--Skill 1-->
-                <div class="skills-content">
+                <div class="skills-content skills-close">
                     <div class="skills-header">
-                        <i></i>
+                        <i class='bx bx-code-curly skills-icon'></i>
                         <div>
                             <h1 class="skills-title">App development</h1>
                         </div>
-                        <i></i>
+                        <i class='bx bx-chevron-down skills-arrow'></i>
                     </div>
 
                     <div class="skills-list grid">
@@ -168,13 +168,13 @@
                 </div>
 
                 <!--Skill 1-->
-                <div class="skills-content">
+                <div class="skills-content skills-close">
                     <div class="skills-header">
-                        <i></i>
+                        <i class='bx bx-code-curly skills-icon'></i>
                         <div>
                             <h1 class="skills-title">Backend development</h1>
                         </div>
-                        <i></i>
+                        <i class='bx bx-chevron-down skills-arrow'></i>
                     </div>
 
                     <div class="skills-list grid">
@@ -212,13 +212,13 @@
                 </div>
 
                 <!--Skill 1-->
-                <div class="skills-content">
+                <div class="skills-content skills-close">
                     <div class="skills-header">
-                        <i></i>
+                        <i class='bx bx-code-curly skills-icon'></i>
                         <div>
                             <h1 class="skills-title">Language</h1>
                         </div>
-                        <i></i>
+                        <i class='bx bx-chevron-down skills-arrow'></i>
                     </div>
 
                     <div class="skills-list grid">
@@ -256,13 +256,13 @@
                 </div>
 
                 <!--Skill 1-->
-                <div class="skills-content">
+                <div class="skills-content skills-close">
                     <div class="skills-header">
-                        <i></i>
+                        <i class='bx bx-code-curly skills-icon'></i>
                         <div>
                             <h1 class="skills-title">Graphics & UI/UX Design </h1>
                         </div>
-                        <i></i>
+                        <i class='bx bx-chevron-down skills-arrow'></i>
                     </div>
 
                     <div class="skills-list grid">
@@ -302,6 +302,87 @@
 
             </div>
         </div>
+    </section>
+
+    <section class="qualification-section">
+        <h2 class="section-title">Qualification</h2>
+        <div class="qualification-tabs">
+            <div class="qualification-button button-flex">
+                <i class='bx bxs-graduation qualification-icon' ></i>
+                Education
+            </div>
+
+            <div class="qualification-button button-flex">
+                <i class='bx bxs-graduation qualification-icon' ></i>
+                Experience
+            </div>
+
+            <div class="qualification-sections">
+                <!--Section1-->
+                <div class="qualification-content qualification-active" data-content id="education">
+                    <!--con 1-->
+                    <div class="qualification-data">
+                        <div>
+                            <h3 class="qualification-title">Software Engineer</h3>
+                            <span class="qualification-subtitle">Shahjalal University of Science and Technology</span>
+                            <div class="qualification-calendar">
+                                <i class='bx bx-calendar'></i>
+                                2020 - 2024
+                            </div>
+                        </div>
+
+                        <div>
+                            <span class="qualification-rounder"></span>
+                            <span class="qualification-line"></span>
+                        </div>
+                    </div>
+
+                    <!--con 2-->
+                    <div class="qualification-data">
+                        <div></div>
+
+                        <div>
+                            <span class="qualification-rounder"></span>
+                            <span class="qualification-line"></span>
+                        </div>
+
+                        <div>
+                            <h3 class="qualification-title">HSC</h3>
+                            <span class="qualification-subtitle">Murarichand College, Sylhet</span>
+                            <div class="qualification-calendar">
+                                <i class='bx bx-calendar'></i>
+                                2017 - 2019
+                            </div>
+                        </div>
+
+                        
+                    </div>
+
+                    <!--con 3-->
+                    <div class="qualification-data">
+                        <div>
+                            <h3 class="qualification-title">SSC</h3>
+                            <span class="qualification-subtitle">Derai Govt Girls High School</span>
+                            <div class="qualification-calendar">
+                                <i class='bx bx-calendar'></i>
+                                2020 - 2024
+                            </div>
+                        </div>
+
+                        <div>
+                            <span class="qualification-rounder"></span>
+                            <span class="qualification-line"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Section2-->
+                <div class="qualification-content" data-content id="experience">
+
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <section class="Projects" id="projects">
